--- a/dev/index.html
+++ b/dev/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Vite App</title>
+    <script defer type="module" src="/main.js"></script>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <section class="pokemonCounts"></section>
+    <section class="minPokeWeight"></section>
+    <section class="pokeList"></section>
   </body>
 </html>
